@@ -50,7 +50,6 @@ Alien::Libarchive3                             = 0.29
 Alien::Libbz2                                  = 0.23
 Alien::LibreSSL                                = 0.02
 Alien::libtool                                 = 0.11
-Alien::libtool24                               = 0.06
 Alien::LibYAML                                 = 2.04
 Alien::Libxml2                                 = 0.03
 Alien::LZO                                     = 0.02
