@@ -5,6 +5,7 @@ Revision history for {{$dist->name}}
   - Added Dist::Zilla::Plugin::FFI
   - Added FFI::Build
   - updated my dists to latest
+  - Remove Alien::libtool24
 
 2.05      2018-06-25 17:00:53 -0400
   - Updated my dists to latest
